# fesapi

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PULL_REQUEST_TEMPLATE.md  README.md  appveyor.yml  azure-pipelines.yml  dependabot.yml  issue_template.md
cmake/minizip/: CMakeLists.txt
cs/: CMakeLists.txt  TestingPackageCs.epc  TestingPackageCs.h5
cs/EtpClientExample/: EtpClientExample.csproj  EtpClientExample.sln
cs/Properties/: AssemblyInfo.cs
cs/example/: Program.cs  example.csproj  example.sln
etpClientExample/: CMakeLists.txt  EtpHdfProxy.cpp  EtpHdfProxy.h  MyOwnCoreProtocolHandlers.cpp  MyOwnCoreProtocolHandlers.h  MyOwnDirectedDiscoveryProtocolHandlers.cpp  MyOwnDirectedDiscoveryProtocolHandlers.h  MyOwnDiscoveryProtocolHandlers.cpp  MyOwnDiscoveryProtocolHandlers.h  MyOwnEtpClientSession.cpp  MyOwnEtpClientSession.h  MyOwnEtpClientSessionEpcBased.h  MyOwnEtpPlainClientSession.cpp  MyOwnEtpPlainClientSession.h  MyOwnStoreNotificationProtocolHandlers.cpp  MyOwnStoreNotificationProtocolHandlers.h  MyOwnStoreProtocolHandlers.cpp  MyOwnStoreProtocolHandlers.h  main.cpp
etpClientExample/ssl/: MyOwnEtpSslClientSession.cpp  MyOwnEtpSslClientSession.h
etpServerExample/: CMakeLists.txt  Helpers.cpp  Helpers.h  MyDataObjectRepository.cpp  MyDataObjectRepository.h  MyOwnCoreProtocolHandlers.cpp  MyOwnCoreProtocolHandlers.h  MyOwnDataArrayProtocolHandlers.cpp  MyOwnDataArrayProtocolHandlers.h  MyOwnDirectedDiscoveryProtocolHandlers.cpp  MyOwnDirectedDiscoveryProtocolHandlers.h  MyOwnDiscoveryProtocolHandlers.cpp  MyOwnDiscoveryProtocolHandlers.h  MyOwnEtpPlainServerSession.cpp  MyOwnEtpPlainServerSession.h  MyOwnEtpServerSession.cpp  MyOwnEtpServerSession.h  MyOwnStoreNotificationProtocolHandlers.cpp  MyOwnStoreNotificationProtocolHandlers.h  MyOwnStoreProtocolHandlers.cpp  MyOwnStoreProtocolHandlers.h  MyServerInitializationParameters.h  Server.h  ServerCapabilities.cpp  ServerCapabilities.h  globalVariables.h  main.cpp
etpServerExample/ssl/: MyOwnEtpSslServerSession.cpp  MyOwnEtpSslServerSession.h  server_certificate.h
example/: CMakeLists.txt  HdfProxyExample.cpp  HdfProxyExample.h  HdfProxyFactoryExample.h  example.cpp  exampleMPI.cpp
examples/epcExample/: CMakeLists.txt
java/: CMakeLists.txt
python/: .gitignore  BUILD.md  CMakeLists.txt  README.md  setup.py
python/example/: example.py  fesapi.ipynb
python/src/: .gitignore  etp_client_example.py  example.py
src/: CMakeLists.txt  FesapiCppConfig.cmake.in  MacroDefinitions.h  nsDefinitions.h
src/common/: AbstractHdfProxy.cpp  AbstractHdfProxy.h  AbstractObject.cpp  AbstractObject.h  CMakeLists.txt  DataFeeder.h  DataObjectIdentifier.cpp  DataObjectIdentifier.h  DataObjectReference.cpp  DataObjectReference.h  DataObjectRepository.cpp  DataObjectRepository.h  EnumStringMapper.cpp  EnumStringMapper.h  EpcDocument.cpp  EpcDocument.h  EpcExternalPartReference.cpp  EpcExternalPartReference.h  GraphicalInformationSet.cpp  GraphicalInformationSet.h  HdfProxy.cpp  HdfProxy.h  HdfProxyFactory.cpp  HdfProxyFactory.h  HdfProxyMPIFactory.cpp  HdfProxyMPIFactory.h  HdfProxyROS3Factory.h  HidtType.h  NumberArrayStatistics.h  PropertyKind.cpp  PropertyKind.h
src/eml2/: AbstractHdfProxy.cpp  AbstractHdfProxy.h  AbstractLocal3dCrs.cpp  AbstractLocal3dCrs.h  Activity.cpp  Activity.h  ActivityTemplate.cpp  ActivityTemplate.h  CMakeLists.txt  ColumnBasedTable.cpp  ColumnBasedTable.h  EpcExternalPartReference.cpp  EpcExternalPartReference.h  GraphicalInformationSet.cpp  GraphicalInformationSet.h  HdfProxy.cpp  HdfProxy.h  PropertyKind.cpp  PropertyKind.h  ReferencePointInALocalEngineeringCompoundCrs.cpp  ReferencePointInALocalEngineeringCompoundCrs.h  TimeSeries.cpp  TimeSeries.h
src/eml2_0/: CMakeLists.txt  HdfProxy.cpp  HdfProxy.h  HdfProxyMPI.cpp  HdfProxyMPI.h  HdfProxyROS3.cpp  HdfProxyROS3.h
src/eml2_1/: CMakeLists.txt  PropertyKind.cpp  PropertyKind.h
src/eml2_3/: Activity.cpp  Activity.h  ActivityTemplate.cpp  ActivityTemplate.h  BusinessAssociate.cpp  BusinessAssociate.h  CMakeLists.txt  ColumnBasedTable.cpp  ColumnBasedTable.h  GraphicalInformationSet.cpp  GraphicalInformationSet.h  HdfProxy.cpp  HdfProxy.h  LocalEngineering2dCrs.cpp  LocalEngineering2dCrs.h  LocalEngineeringCompoundCrs.cpp  LocalEngineeringCompoundCrs.h  PropertyKind.cpp  PropertyKind.h  ReferencePointInALocalEngineeringCompoundCrs.cpp  ReferencePointInALocalEngineeringCompoundCrs.h  TimeSeries.cpp  TimeSeries.h  VerticalCrs.cpp  VerticalCrs.h
src/epc/: CMakeLists.txt  ContentType.cpp  ContentType.h  CoreProperty.cpp  CoreProperty.h  FileContentType.cpp  FileContentType.h  FileCoreProperties.cpp  FileCoreProperties.h  FilePart.cpp  FilePart.h  FileRelationship.cpp  FileRelationship.h  Package.cpp  Package.h  Relationship.cpp  Relationship.h
src/etp/: AbstractClientSession.h  AbstractPlainOrSslServerSession.h  AbstractServerSession.h  AbstractSession.cpp  AbstractSession.h  ClientSession.cpp  ClientSession.h  ClientSessionLaunchers.cpp  ClientSessionLaunchers.h  DataArrayBlockingSession.cpp  DataArrayBlockingSession.h  EtpErrorCodes.hpp  EtpException.h  EtpHdfProxy.cpp  EtpHdfProxy.h  EtpHelpers.cpp  EtpHelpers.h  EtpMessages.h  EtpMessages.hpp  HttpClientSession.h  PlainClientSession.cpp  PlainClientSession.h  PlainServerSession.cpp  PlainServerSession.h  README.md  Server.cpp  Server.h  ServerInitializationParameters.cpp  ServerInitializationParameters.h  ServerSession.cpp  ServerSession.h
src/prodml2_0/: AbstractObject.cpp  AbstractObject.h  DasAcquisition.cpp  DasAcquisition.h  DasInstrumentBox.cpp  DasInstrumentBox.h  FiberOpticalPath.cpp  FiberOpticalPath.h  HdfProxy.cpp  HdfProxy.h
test/: AbstractObjectTest.cpp  AbstractObjectTest.h  AbstractTest.cpp  AbstractTest.h  CMakeLists.txt  DateTimeTest.cpp  DateTimeTest.h  EpcDocumentTest.cpp  EpcDocumentTest.h  GraphicalInformationSetTest.cpp  GraphicalInformationSetTest.h  Witsml14Trajectory.cpp  Witsml14Trajectory.h  config.h  unitTest.cpp
webassembly/: CMakeLists.txt  front-matter.js  package-lock.json  package.json
(+1080 files in other folders)
